--- a/NavigationAndRouting/webapp/manifest.json
+++ b/NavigationAndRouting/webapp/manifest.json
@@ -52,34 +52,38 @@
 				"dataSource": "employeeRemote"
 			}
 		},
-      "routing": {
-         "config": {
-            "routerClass": "sap.m.routing.Router",
-            "viewType": "XML",
-            "viewPath": "sap.ui.demo.nav.view",
-            "controlId": "app",
-            "controlAggregation": "pages",
-            "transition": "slide",
-            "bypassed": {
-               "target": "notFound"
-            }
-         },
-         "routes": [{
-            "pattern": "",
-            "name": "appHome",
-            "target": "home"
-         }],
-         "targets": {
-            "home": {
-               "viewName": "Home",
-               "viewLevel" : 1
-            },
-            "notFound": {
-               "viewName": "NotFound",
-               "transition": "show"
-            }
-         }
-      },
+		"routing": {
+			"config": {
+				"routerClass": "sap.m.routing.Router",
+				"viewType": "XML",
+				"viewPath": "sap.ui.demo.nav.view",
+				"controlId": "app",
+				"controlAggregation": "pages",
+				"transition": "slide",
+				"bypassed": {
+					"target": "notFound"
+				}
+			},
+			"routes": [{
+				"pattern": "",
+				"name": "appHome",
+				"target": "home"
+			}, {
+				"pattern": "employees",
+				"name": "employeeList",
+				"target": "employees"
+			}],
+			"targets": {
+				"home": {
+					"viewName": "Home",
+					"viewLevel": 1
+				},
+				"notFound": {
+					"viewName": "NotFound",
+					"transition": "show"
+				}
+			}
+		},
 		"contentDensities": {
 			"compact": false,
 			"cozy": false
