--- a/NavigationAndRouting/webapp/manifest.json
+++ b/NavigationAndRouting/webapp/manifest.json
@@ -73,7 +73,7 @@
 				"name": "employeeList",
 				"target": "employees"
 			}, {
-				"pattern": "employees/overview",
+				"pattern": "employees/overview:?query:",
 				"name": "employeeOverview",
 				"target": ["employeeOverviewTop", "employeeOverviewContent","employeeOverviewTest"]
 			}, {
